[project]
name = "late-delivery-risk-classifier"
version = "0.1.0"
requires-python = "==3.14.2"
dependencies = [
    "numpy==2.4.1",
    "torch==2.9.1",
]

[dependency-groups]
dev = [
    "ruff==0.14.11",
    "ty==0.0.11",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
